--- a/votaUnicamp.Rmd
+++ b/votaUnicamp.Rmd
@@ -118,7 +118,7 @@ names(tbl2)=c("Nível", "Curso", "Não", "Inf Não", "Sup Não", "Sim", "Inf Sim
 ```
 
 
-Inicialmente podemos conhecer a origem dos votos através de um gráfico de barras. A figura 1 nos permite ver quais são os institutos com mais votos, o que também pode nos trazer informação sobre a homogeneidade de nossa amostra e sua representatividade.
+Inicialmente podemos conhecer a origem dos votos através de um gráfico de barras. A Figura 1 nos permite ver quais são os institutos com mais votos, o que também pode nos trazer informação sobre a homogeneidade de nossa amostra e sua representatividade.
 
 ```{r grafbar, echo=FALSE}
 mytbl = as.data.table(mytbl)
@@ -145,7 +145,7 @@ kable(head(dados2), caption = 'Tabela 2: Votos por instituto')
 
 A Tabela 2 completa encontra-se em **Apêndice**  
 
-Para conhecer um pouco das informações que os dados fornecem, calcularemos estatísticas primárias, como a proporção de votos sim, não e abstenho de cada curso e seus respectivos intervalos de confiança. Podemos ver algumas dessas estatísticas na Tabela 3.
+Para conhecer um pouco das informações que os dados fornecem, calcularemos estatísticas primárias, como a proporção de votos sim, não e abstenho de cada curso, seja ele de nível de graduação ou pós-graduação, e seus respectivos intervalos de confiança. Podemos ver algumas dessas estatísticas na Tabela 3.
 
 ```{r echo=FALSE}
 kable(head(tbl2), caption = "Tabela 3: Proporções por curso")
@@ -153,9 +153,9 @@ kable(head(tbl2), caption = "Tabela 3: Proporções por curso")
 
 Para ver todas as proporções e intervalos de confiança consulte o **Apêndice**.
 
-Levando em consideração que os institutos em sua grande parte possuem cursos em mesma área de estudo, e, além disso, que a greve é votada e decidida em assembléias do instituto como um todo, é interessante analisar a proporção de votos contrários para cada um deles.  
+Levando em consideração que os institutos em sua grande parte possuem cursos em mesma área de estudo, e, além disso, que a greve é votada e decidida em assembléias do instituto como um todo, é interessante analisar a proporção de votos para cada um deles.  
 
-Também devemos considerar os votos dos alunos cuja graduação não é ministrada em Campinas. Nesses casos consideramos os institutos como sendo a própria faculdade. Temos como exemplo o curso de Odontologia no campus de Piracicaba, para ele o instituto será a FOP, assim como os cursos em Limeira pertencem ou à FT ou à FCA, que são as duas unidades da Unicamp na cidade.  
+Também devemos considerar os votos dos alunos cuja graduação não é ministrada em Campinas. Nesses casos consideramos os institutos como sendo a própria faculdade. Temos como exemplo o curso de Odontologia no campus de Piracicaba, para ele o instituto será a FOP, assim como os cursos em Limeira serão ou FT, ou FCA, dependendo de onde são ministrados, uma vez que são as duas unidades da Unicamp na cidade.  
 
 Na Tabela 4 podemos ver algumas dessas proporções por institutos.  
 
@@ -194,11 +194,11 @@ res_boot = boot(pop, prop, R=10000)
 ```
   
   
-Estimamos então que a proporção de alunos contrários à greve corresponde à `r round(res_boot$t0,2)*100`%.  
+Então o resultado final estimado foi que a proporção de alunos contrários à greve corresponde à `r round(res_boot$t0,2)*100`%.  
 
 ##Análise de Cluster
 
-Baseando-se em um conhecimento prévio do ambiente acadêmico e, principalmente, comportamental, sabemos que alguns institutos tem opinão semelhante. Acredita-se que o maior envolvimento de alunos que tem como área de estudo Ciências Humanas, por exemplo, sejam mais favoráveis à greve, inclusive pelo enfoque de seus cursos. O que pode ser comprovado ao calcularmos as proporções de votos por área de estudo presentes na Tabela 5.  
+Baseando-se em um conhecimento prévio do ambiente acadêmico e, principalmente, comportamental, sabemos que alguns institutos tem opinão semelhante. Acredita-se que alunos que tem como área de estudo Ciências Humanas, por exemplo, sejam mais favoráveis à greve, uma vez que enfoque de seus cursos são mais voltados para questões sociais. O que pode ser comprovado ao calcularmos as proporções de votos por área de estudo presentes na Tabela 5.  
 
 ```{r prop-area, echo=FALSE}
 darea = mytbl[, list(total=sum(total), sim=sum(sim), nao=sum(nao), abstencao=sum(abstencao)), by= area]
@@ -206,13 +206,14 @@ darea = as.data.frame(darea)
 darea$psim = with(darea, sim/total)
 darea$pnao = with(darea, nao/total)
 darea$pabs = with(darea, abstencao/total)
-darea
+names(darea)=c("Área", "Total", "Sim", "Não", "Abstenho", "Proporção Sim", "Proporção Não", "Proporção Abs")
+kable(darea, caption="Tabela 5: Votos por área de estudo")
 ```
 
 
 Portanto, é natural questionar-se se existem alguns institutos com comportamentos semelhantes. Podemos analisar isso graficamente, ao realizarmos um gráfico de componentes. Tal análise gráfica pode ser vista na Figura 2.
 
-```{r plot, echo=FALSE, fig.cap="Figura 2: Gráfico de Componentes para Institutos"}
+```{r plot, echo=FALSE, fig.cap="Figura 2: Gráfico de Componentes para Institutos", fig.align="center"}
 newtbl = dados2[,c("Não","Sim","Abstenções")]
 newtbl = as.data.frame(newtbl)
 dados2$Instituto = as.character(dados2$Instituto)
@@ -222,28 +223,21 @@ biplot(fit)
 ```
   
   
-Como podemos ver, o gráfico acima mostra a tendência dos votos por institutos em relação aos vetores que representam as opções de voto. Nota-se que existem alguns institutos aglomerados, o que indica semelhança de proporções e, por isso, cabe um estudo aprofundado do assunto.  
+Como podemos ver, o gráfico acima mostra a tendência de votos por institutos em relação aos vetores que representam as opções. Nota-se que existem alguns institutos aglomerados, o que indica semelhança de proporções e, por isso, faz-se necessário um estudo aprofundado do assunto.  
 
-Nesse caso, a metodologia usada será a análise de *cluster*, um agrupamento nos institutos com comportamento semelhante.  
+Para isso empregamos análise de *cluster*. Ela foi realizada através de um dendograma, como ilustrado na Figura 3.
 
-A análise de *cluster* foi feito por meio de um dendograma.
-
-```{r dendograma, echo=FALSE, fig.cap="Dendograma de Cluster"}
+```{r dendograma, echo=FALSE, fig.cap="Figura 3: Dendograma de Cluster", fig.align="center"}
 teste=vegdist(newtbl, method = "bray")
 plot(hclust(teste, method = "average"), hang = -1, main = "Dendograma de Bray-Curtis", xlab = "Institutos", ylab = "Índice de Bray-Curtis")
-m=mean(c(1:6))
 ```
 
-O dendograma acima ilustra o nível de similaridade no eixo vertical 
-e as diferentes observações são listadas ao longo do eixo horizontal.  
-É possível ver em que nível de similaridade os agrupamentos são formados, 
-e a composição dos agrupamentos da partição final.  
-Tais níveis foram calculados por meio do índice de *Bray-Curtis*. Esse índice, quantitativo, foi usado para quantificar a similaridade entre diferentes institutos. Além disso, pertence ao intervalo $[0,1]$ e, quanto mais próximo de $0$, a semelhança é maior entre os institutos, uma vez que o índice calcula a "distância" entre grupos.
+O dendograma ilustra o nível de similaridade no eixo vertical e os institutos são listados ao longo do eixo horizontal. É possível ver em que nível de similaridade os agrupamentos são formados, e a composição dos agrupamentos da partição final. Tais níveis foram calculados por meio do índice de *Bray-Curtis*. Esse índice quantitativo varia entre 0 e 1, e foi usado para mensurar a similaridade entre diferentes institutos. Quanto mais próximo de $0$, a semelhança é maior entre os institutos, uma vez que o índice calcula a "distância" entre eles.
 
 #Conclusão
 
 A partir dos estudos realizados nesse trabalho, podemos concluir 
-que r round(res_boot,2)*100% dos alunos são contrarios a greve. 
+que `r round(res_boot$t0,2)*100`% dos alunos são contrários à greve. 
 Contudo, dado a atual situação do campus isso nos leva a questionar 
 a representatividade, ora das assembleias estudantis, ora da votação 
 dos dados provenientes do site. 
